--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -49,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
-        android:text="Chat Socket:"
+        android:text="Message:"
         android:layout_below="@+id/serverIp"
         android:layout_alignStart="@+id/serverIp" />
 
@@ -64,11 +64,19 @@
         android:layout_marginTop="15dp"
         android:layout_marginRight="20dp"/>
 
+    <Button
+        android:id="@+id/sendDirect"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Enviar"
+        android:layout_below="@id/chatSocket"
+        android:layout_marginLeft="20dp"/>
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/messages"
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@id/chatSocket"
+        android:layout_below="@id/sendDirect"
         android:layout_margin="20dp"/>
 </RelativeLayout>
