--- a/app/src/main/res/layout/chat_layout.xml
+++ b/app/src/main/res/layout/chat_layout.xml
@@ -20,6 +20,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentStart="true"
                 android:layout_margin="20dp"
-                android:textColor="#FAFAFA"/>
+                android:textColor="#FAFAFA"
+                android:elevation="2dp"/>
     </android.support.v7.widget.CardView>
 </LinearLayout>
